# bowline

./: .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  eslint.config.js  package.json  pnpm-lock.yaml  public-export.json  tsconfig.base.json  tsconfig.json  tsconfig.paths.json
crates/bowline-control-plane/: Cargo.toml
crates/bowline-control-plane/src/: client.rs  device_proofs.rs  errors.rs  fake.rs  gc.rs  hosted.rs  hosted_endpoints.rs  lib.rs  primitives.rs  tests.rs  transfer.rs  types.rs  validation.rs
crates/bowline-control-plane/src/fake/: client.rs  devices.rs  harness.rs  leases.rs  objects.rs  recovery.rs  sync.rs  work_views.rs
crates/bowline-control-plane/src/hosted/: client.rs  contracts.rs  dashboard.rs  devices.rs  generated.rs  generated_types.rs  leases.rs  objects.rs  parse.rs  proof.rs  proof_contract.rs  recovery.rs  rpc.rs  sync.rs  tests.rs  wire_validation.rs  work_views.rs
crates/bowline-control-plane/src/transfer/: streaming_upload.rs  tests.rs
crates/bowline-control-plane/src/types/: devices.rs  events.rs  leases.rs  objects.rs  status.rs  work_views.rs  workspace.rs
crates/bowline-control-plane/tests/: control_plane_contract.rs  metadata_graph_contract.rs
crates/bowline-control-plane/tests/control_plane_contract/: devices_recovery.rs
crates/bowline-control-plane/tests/support/: snapshot_graph.rs
crates/bowline-core/: Cargo.toml
crates/bowline-core/src/: commands.rs  events.rs  fs_atomic.rs  git_paths.rs  git_worktree_link.rs  history.rs  hosted.rs  ids.rs  introspection.rs  lib.rs  namespace_snapshot.rs  policy.rs  retry.rs  shell.rs  work_views.rs  workspace_graph.rs
crates/bowline-core/src/commands/: agent.rs  doctor.rs  handoff.rs
crates/bowline-core/src/devices/: mod.rs
crates/bowline-core/src/status/: convergence.rs  facts.rs  mod.rs
crates/bowline-core/src/wire/: generated.rs  generated_daemon_rpc.rs  generated_status.rs  generated_status_convergence.rs  generated_status_fact_authorities.rs  generated_status_output.rs  generated_status_output_support.rs  generated_status_transport.rs  generated_watch.rs  mod.rs  status_transport.rs
crates/bowline-core/tests/: command_contract_fixtures.rs  event_contract_fixtures.rs  status_contract_fixtures.rs  workspace_graph_contract_fixtures.rs
crates/bowline-core/tests/support/: contract_fixtures.rs
crates/bowline-daemon/: Cargo.toml
crates/bowline-daemon-rpc/: Cargo.toml
crates/bowline-daemon-rpc/src/: client.rs  client_tests.rs  codec.rs  lib.rs  negotiation.rs
crates/bowline-daemon/src/: lib.rs  main.rs  manifest_driver.rs  manifest_transport.rs
crates/bowline-daemon/src/daemon/: cli.rs  control_plane.rs  coordinator.rs  finder_status.rs  hosted_context.rs  mod.rs  protocol.rs  protocol_v2.rs  server_state.rs  status.rs  store_access.rs  store_health.rs  store_health_recovery_tests.rs  sync.rs  tests.rs  watcher.rs
crates/bowline-daemon/src/manifest_driver/: tests.rs
crates/bowline-daemon/src/manifest_transport/: helpers.rs  tests.rs
crates/bowline-daemon/src/status_projection/: collector.rs  delivery.rs  engine_status.rs  input.rs  mod.rs  reducer.rs  reducer_tests.rs  retry.rs  service.rs  subscriptions.rs  tests.rs  types.rs
crates/bowline-daemon/tests/: daemon_contract.rs
crates/bowline-index/: Cargo.toml
crates/bowline-index/src/: lib.rs  symbols.rs
crates/bowline-index/tests/: namespace_index_contract.rs  symbol_index_contract.rs  text_index_contract.rs
crates/bowline-local/: Cargo.toml
crates/bowline-local/src/: fakes.rs  fs_access.rs  glob.rs  history.rs  history_namespace.rs  history_tests.rs  hydration_budget.rs  indexed.rs  lib.rs  lifecycle.rs  linux_service.rs  macos_service.rs  page_test_support.rs  search.rs  service_runtime.rs  symbols.rs  workspace.rs
crates/bowline-local/src/account/: workos.rs
crates/bowline-local/src/agents/: budget.rs  context.rs  daemon.rs  error.rs  hydration.rs  lease.rs  mcp_token.rs  mod.rs  paths.rs  persistence.rs  session.rs  tests.rs  tools.rs  types.rs
crates/bowline-local/src/bootstrap/: install.rs  mod.rs  process.rs  ssh.rs
crates/bowline-local/src/device_keys/: daemon_env.rs  encoding.rs  mod.rs  replacement.rs  replacement_tests.rs
crates/bowline-local/src/env/: import.rs  materialize.rs  mod.rs  parser.rs  provider.rs
crates/bowline-local/src/events/: mod.rs  status_clear.rs
crates/bowline-local/src/explain/: mod.rs
crates/bowline-local/src/indexed/: durable.rs  error.rs  packs.rs  symbols.rs  tests.rs
crates/bowline-local/src/init/: mod.rs
crates/bowline-local/src/metadata/: mod.rs  paths.rs  schema.rs  sqlite.rs  store.rs
crates/bowline-local/src/notifications/: mod.rs
crates/bowline-local/src/policy/: mod.rs  project_view.rs  state_paths.rs  traversal.rs  types.rs
crates/bowline-local/src/scanner/: git.rs  mod.rs  observation_scope.rs  stat_fingerprint.rs  tests.rs
crates/bowline-local/src/setup/: infer.rs  local_state.rs  mod.rs  readiness.rs  recipe.rs  redact.rs  runner.rs
crates/bowline-local/src/status/: accumulator.rs  collector.rs  common.rs  compose.rs  materialization.rs  mod.rs  scope.rs  setup.rs  signals.rs  snapshot.rs  sync.rs  tests.rs  work.rs
crates/bowline-local/tests/: env_parser_phase8.rs  env_setup_phase8.rs  history.rs  indexed_exploration_phase11.rs  setup_recipe_phase8.rs  storage_substrate.rs  sync_daemon_queue.rs  sync_phase7.rs
crates/bowline-storage/: Cargo.toml
crates/bowline-storage/src/: cache.rs  envelope.rs  gc.rs  hydration.rs  lib.rs  manifest.rs  metadata_page.rs  packfile.rs  recovery_preimage.rs  store.rs
crates/bowline-storage/tests/: storage_substrate.rs
crates/bowline-testkit/: Cargo.toml
crates/bowline-testkit/examples/: namespace_baseline.rs  namespace_page_baseline.rs
crates/bowline-testkit/src/: cost.rs  hosted_byte_store.rs  invariants.rs  lib.rs  scenario.rs  snapshot_fixture.rs
crates/bowline-testkit/tests/: cost_budget.rs  fault_crash_resume.rs  invariants.rs  offline_contract.rs  scenario.rs
(+562 files in other folders)
