[package]
name = "bowline-control-plane"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
hosted-convex = [
  "dep:blake3",
  "dep:convex",
  "dep:futures",
  "dep:getrandom",
  "dep:reqwest",
  "dep:time",
  "dep:tokio",
]

[dependencies]
base64 = "0.22"
blake3 = { version = "1.8", optional = true }
convex = { version = "0.10.4", optional = true }
futures = { version = "0.3", optional = true }
bowline-core = { path = "../bowline-core" }
bowline-storage = { path = "../bowline-storage" }
getrandom = { version = "0.3", optional = true }
p256 = { version = "0.13.2", features = ["ecdsa"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"], optional = true }
tokio = { version = "1.47", features = ["rt-multi-thread", "sync"], optional = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
