[package]
name = "bowline-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
time = { version = "0.3", features = ["parsing"] }

[dev-dependencies]

[lints]
workspace = true
