[package]
name = "bowline-daemon-rpc"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bowline-core = { path = "../bowline-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
