[package]
name = "bowline-daemon"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bowline-control-plane = { path = "../bowline-control-plane", features = ["hosted-convex"] }
bowline-core = { path = "../bowline-core" }
bowline-local = { path = "../bowline-local" }
bowline-storage = { path = "../bowline-storage" }
notify = "8.2.0"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
uds = "0.4"

[[bin]]
name = "bowline-daemon"
path = "src/main.rs"
